# the_project_tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pr_database  pyproject.toml  requirements.txt  the_project_tracker-0.1.0-py3-none-any.whl
.devcontainer/: devcontainer.json
docker/: Dockerfile
docs/: data_models.drawio
examples/: crawl_sphinx_documentation.ipynb  documentation_to_ft_dataset.ipynb  migrator.ipynb  vicuna_exploration.ipynb
examples/data/: content_dict.pickle
src/: run_app.sh  run_pipeline_prs.sh  run_pipeline_releases.sh
src/core/: pipeline.py
src/db/: sqlite_conn.py
st_app/: Projects.py  Proyectos.py  style.css  utils.py
st_app/pages/: 1_About_the_project.py  1_Sobre_OSPT_y_su_uso.py  1_Sobre_el_Proyecto_y_su_uso.py
the_project_tracker/cli/: __init__.py  main.py
the_project_tracker/core/: data_models.py  explainer.py  github_retriever.py  migrator.py  pipeline.py  stargazers.py  utils.py
the_project_tracker/db/: conn.py  pg_conn.py  sqlite_conn.py  utils.py
