[tool.poetry]
name = "the-project-tracker"
version = "0.1.0"
description = "Code projects AI tracker"
authors = ["Carlos Vecina <carlos.vecina@jobandtalent.com>"]
readme = "README.md"
packages = [{ include = "the_project_tracker" }]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.2"
pydantic = "^1.10.6"
SQLAlchemy = "1.4.41"
pandas = "^1.5.3"
pytest = "^7.2.2"
ipykernel = "^6.21.3"
requests = "^2.28.2"
click = "^8.0"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
psycopg2 = "^2.9.6"
streamlit = { version = "~1.21.0", optional = true }
streamlit_pills = { version = "==0.3.0", optional = true }
stqdm = { version = "*", optional = true }
markdownlit = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[tool.poetry.extras]
st_app = ["streamlit", "streamlit_pills", "stqdm", "markdownlit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
the_project_tracker = "the_project_tracker.cli:pipeline_cli"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = ["st_app"]
