[tool.poetry]
name = "the-project-tracker"
version = "0.1.0"
description = "Code projects AI tracker"
authors = ["Carlos Vecina <carlos.vecina@jobandtalent.com>"]
readme = "README.md"
packages = [{ include = "the_project_tracker" }]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.2"
pydantic = "^1.10.6"
SQLAlchemy = "1.4.41"
pandas = "^1.5.3"
pytest = "^7.2.2"
ipykernel = "^6.21.3"
requests = "^2.28.2"
click = "^8.0"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
streamlit = "~1.21.0"
streamlit_pills = "==0.3.0"
markdownlit = "*"
#streamlit = { version = "~1.21.0", optional = true }
#streamlit_pills = { version = "==0.3.0", optional = true }
#markdownlit = { version = "*", optional = true }
psycopg2-binary = "^2.9.6"
sshtunnel = "^0.4.0"
urllib3 = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

#[tool.poetry.extras]
#st_app = ["streamlit", "streamlit_pills", "markdownlit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
the_project_tracker = "the_project_tracker.cli:pipeline_cli"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = ["st_app"]
